Checkout on mobiles fixed an overmargin causing extra scrollability to the right. Continue shopping link added to the top of the cart instead of the bottom, box shadow rules applied to make the containers pop

--- a/static/styles/scss/main.scss
+++ b/static/styles/scss/main.scss
@@ -390,6 +390,7 @@ section {
   margin: 12px;
   border-radius: 12px;
   padding: 6px;
+  box-shadow: 1px 1px 3px 1px #404040;
 }
 
 .form-control[name=quantity] {
@@ -410,6 +411,8 @@ section {
   padding: 55px;
   height: 100%;
   border-radius: 12px;
+  box-shadow: 1px 1px 3px 1px #404040;
+
 }
 
 .cart-image {
@@ -417,10 +420,7 @@ section {
   height: 125px;
 }
 
-.padding {
-  padding: 12px;
-  margin: 4px;
-}
+
 
 
 .ch-pr-row {
@@ -428,10 +428,9 @@ section {
   padding: 5px;
 }
 
-.remove-but {
-  margin-left: 120px;
+.but-row {
+  margin-left: 35px;
 }
-
 
 /* Footer */
 #sticky-footer {
@@ -473,6 +472,9 @@ section {
   /* Styles */
   body {
     max-width: 100%;
+  }
+  section {
+    padding-top: 45px;
   }
 
   /* Landing Styles */
@@ -549,15 +551,23 @@ section {
   .cart-container {
     margin-top: 8px;
     padding-top: 65px;
+    width: 100%;
+    max-width: 100%;
+    margin-left: -12px;
   }
 
   .remove-but {
     margin-left: 301px;
     margin-bottom: 7px;
   }
+
+  .but-row {
+    margin-left: 75px;
+  }
   .items-container,
   .total-container {
     width: 100%;
+
   }
 
   /* footer */
